--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ workflows:
             polling_stations\/apps\/data_importers\/management\/commands\/import_(?!eoni).+\.py imports-changed true
             (?!polling_stations\/apps\/data_importers\/management\/commands\/import_.+\.py).* application-changed true
             polling_stations\/apps\/data_importers\/management\/commands\/import_eoni.py eoni-changed true
-          base-revision: master
+          base-revision: development
           tag: 3.10.8
           # this is the path of the configuration we should trigger once
           # path filtering and pipeline parameter value updates are
