--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,11 @@
 repos:
--   repo: https://github.com/psf/black
-    rev: 23.7.0
-    hooks:
-    -   id: black
 - repo: https://github.com/astral-sh/ruff-pre-commit
   # Ruff version.
-  rev: v0.3.5
+  rev: v0.4.6
   hooks:
     - id: ruff
       args: [ --fix, --exit-non-zero-on-fix ]
+    - id: ruff-format
 -   repo: local
     hooks:
     -   id: pytest
