check djhtml in CI

--- a/.circleci/deploy-config.yml
+++ b/.circleci/deploy-config.yml
@@ -105,6 +105,7 @@ jobs:
             python manage.py makemigrations --check
             ruff format . --check
             ruff check .
+            git ls-files '*.html' | xargs djhtml --check
 
       - run:
           name: Pytest
