Use ruff.lint in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,7 @@
 [tool.ruff]
 line-length = 88
+
+[ruff.lint]
 ignore = [
     "E501",
     "E203", #https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices
