--- a/requirements/base.in
+++ b/requirements/base.in
@@ -1,44 +1,42 @@
+
 asana
+boto3>1.0.0,<2.0.0
+botocore
 commitment<4.0.0
+django<4.3
 dj-database-url
+django-cors-headers
+django-dotenv
 django-extensions
 django-filter
 django-localflavor
-markdown
-Django<4.3
+django-sesame
 djangorestframework
 djangorestframework-csv
 djangorestframework-gis
 drf_spectacular<1
-django-cors-headers
-django-sesame
 fastkml
-
-rapidfuzz
+freezegun
 lxml
+markdown
 marshmallow
+polars
 psycopg2-binary<3.0
 pyshp
+rapidfuzz
 requests>=2.22.0
 retry
 rich
 rtree
-sentry_sdk
-slack_sdk
-boto3>1.0.0,<2.0.0
-uk-geo-utils
-freezegun
-polars
-
 # ruff needs to be in the production requirements
 # because https://github.com/DemocracyClub/UK-Polling-Stations/blob/7323740ecade04f8e883b18fb3363e6f6ec37ff6/polling_stations/apps/data_importers/import_script.py#L4-L14
 # is used when we create a PR after a file upload is received
 ruff==0.4.6
+sentry_sdk
+slack_sdk
+uk-geo-utils
+
 
 https://github.com/DemocracyClub/design-system/archive/refs/tags/0.4.6.zip
 https://github.com/DemocracyClub/dc_django_utils/archive/refs/tags/7.0.1.zip
 https://github.com/DemocracyClub/dc_logging/archive/refs/tags/1.1.0.zip
-
-
-botocore
-django-dotenv
