--- a/.circleci/deploy-config.yml
+++ b/.circleci/deploy-config.yml
@@ -6,6 +6,10 @@ orbs:
   slack: circleci/slack@4.13.3
   aws-cli: circleci/aws-cli@4.1.3
 
+commands:
+  install_uv:
+    steps:
+      - run: deploy/files/scripts/install_uv.sh
 
 # the default pipeline parameters, which will be updated according to
 # the results of the path-filtering orb
@@ -42,7 +46,7 @@ jobs:
           node-version: '18'
 
       - restore_cache:
-          key: v2-polling_stations-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}-{{ checksum "requirements/production.txt" }}-{{ checksum "requirements/ci.txt" }}
+          key: v1-dependencies-{{ checksum "uv.lock" }}-{{ checksum "package-lock.json" }}
 
       - run:
           name: Install node node_modules
@@ -51,41 +55,29 @@ jobs:
           override-ci-command: npm ci
 
       - run:
-          name: install app dependencies
-          command: |
-            sudo apt update && sudo apt install -y gdal-bin
-            pyenv local $(pyenv versions --bare | grep 3.12 | head -n 1)
-            python -m venv .venv
-            . .venv/bin/activate
-            python -m pip install --upgrade pip
-            pip install --no-deps -r requirements/base.txt -r requirements/testing.txt -r requirements/ci.txt
-            playwright install
+          name: install gdal
+          command: sudo apt update && sudo apt install -y gdal-bin
+
+      - install_uv
 
       - run:
-          name: install lambda trigger Python dependencies
-          command: |
-            . .venv/bin/activate
-            pip install --no-deps -r cdk/lambdas/wdiv-s3-trigger/requirements.txt
-            pip install --no-deps -r cdk/lambdas/wdiv-s3-trigger/requirements/testing.txt
+          name: install python dependencies
+          command: uv sync --all-packages --group testing --group dev --group ci --group cdk
 
       - run:
-          name: install CDK Python dependencies
-          command: |
-            . .venv/bin/activate
-            pip install --no-deps -r requirements/cdk.txt
+          name: Install Playwright
+          command:  uv run playwright install
 
       - run:
-          name: install Prod dependencies
-          command: |
-            . .venv/bin/activate
-            pip install --no-deps -r requirements/production.txt
+          name: Prune UV cache
+          command: uv cache prune --ci
 
       - save_cache:
           paths:
             - ./.venv
             - ./node_modules
-            - ./home/circleci/.cache
-          key: v2-polling_stations-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}-{{ checksum "requirements/production.txt" }}-{{ checksum "requirements/ci.txt" }}
+            - ~/.cache/uv
+          key: v1-dependencies-{{ checksum "uv.lock" }}-{{ checksum "package-lock.json" }}
 
       - run:
           name: Install HTML Tidy
@@ -102,12 +94,13 @@ jobs:
           name: Pre-test checks
           command: |
             . .venv/bin/activate
-            python -m pip check
+            uv pip check
             python manage.py check
             python manage.py makemigrations --check
-            ruff format . --check
-            ruff check .
-            git ls-files '*.html' | xargs djhtml --check
+
+      - run:
+          name: code check
+          command: ./scripts/code-check.sh
 
       - run:
           name: Pytest
@@ -138,13 +131,12 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: v2-polling_stations-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}-{{ checksum "requirements/production.txt" }}-{{ checksum "requirements/ci.txt" }}
+          key: v1-dependencies-{{ checksum "uv.lock" }}-{{ checksum "package-lock.json" }}
       - aws-cli/setup
       - run:
           name: Check and run new import scripts.
           command: |
             sudo apt update && sudo apt install -y gdal-bin
-            pyenv local $(pyenv versions --bare | grep 3.12 | head -n 1)
             . .venv/bin/activate
             export CI_DB_PASSWORD=`aws ssm get-parameter --query Parameter.Value --name 'RDS_DB_PASSWORD' --output text`
             export CI_DB_NAME=`aws ssm get-parameter --query Parameter.Value --name 'RDS_DB_NAME' --output text`
@@ -171,19 +163,9 @@ jobs:
     steps:
     - checkout
     - restore_cache:
-        key: v1-machine-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}
-    - run:
-        name: Install CDK Python dependencies
-        command: |
-          pyenv local $(pyenv versions --bare | grep 3.12 | head -n 1)
-          python -m venv .venv
-          . .venv/bin/activate
-          python -m pip install --no-deps -r requirements/cdk.txt
-    - save_cache:
-        paths:
-          - ./.venv
-          - ./node_modules
-        key: v1-machine-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}
+        key: v1-dependencies-{{ checksum "uv.lock" }}-{{ checksum "package-lock.json" }}
+    - install_uv
+    - run: uv sync --all-packages --group testing --group dev --group ci --group cdk
     - run:
         name: CDK version
         command: |
@@ -214,11 +196,12 @@ jobs:
     steps:
     - checkout
     - restore_cache:
-        key: v1-machine-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}
+        key: v1-dependencies-{{ checksum "uv.lock" }}-{{ checksum "package-lock.json" }}
+    - install_uv
+    - run: uv sync --all-packages --group testing --group dev --group ci --group cdk
     - run:
         name: CDK deploy
         command: |
-          pyenv local $(pyenv versions --bare | grep 3.12 | head -n 1)
           . .venv/bin/activate
           npx cdk deploy --all --require-approval never --concurrency 3
     # In the event the deployment has failed, alert the dev team
@@ -255,11 +238,14 @@ jobs:
     - node/install:
         node-version: '18'
     - restore_cache:
-        key: v2-polling_stations-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}-{{ checksum "requirements/production.txt" }}-{{ checksum "requirements/ci.txt" }}
+        key: v1-dependencies-{{ checksum "uv.lock" }}-{{ checksum "package-lock.json" }}
+
+    - install_uv
+    - run: uv sync --all-packages --group testing --group dev --group ci --group cdk
+
     - run:
         name: "Code Deploy: Create deployment group"
         command: |
-          pyenv local $(pyenv versions --bare | grep 3.12 | head -n 1)
           . .venv/bin/activate
           python deploy/create_deployment_group.py
     - run:
@@ -298,13 +284,12 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: v2-polling_stations-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}-{{ checksum "requirements/production.txt" }}-{{ checksum "requirements/ci.txt" }}
+          key: v1-dependencies-{{ checksum "uv.lock" }}-{{ checksum "package-lock.json" }}
       - aws-cli/setup
       - run:
           name: Check and run new import scripts after a deploy.
           command: |
             sudo apt update && sudo apt install -y gdal-bin
-            pyenv local $(pyenv versions --bare | grep 3.12 | head -n 1)
             . .venv/bin/activate
             export CI_DB_PASSWORD=`aws ssm get-parameter --query Parameter.Value --name 'RDS_DB_PASSWORD' --output text`
             export CI_DB_NAME=`aws ssm get-parameter --query Parameter.Value --name 'RDS_DB_NAME' --output text`
