--- a/polling_stations/apps/data_finder/tests/playwright/cassettes/test_northern_ireland[chromium].yaml
+++ b/polling_stations/apps/data_finder/tests/playwright/cassettes/test_northern_ireland[chromium].yaml
@@ -7,7 +7,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [python-requests/2.18.4]
     method: GET
-    uri: https://elections.democracyclub.org.uk/api/elections.json?coords=54.622642,-5.923832&future=1&current=1&identifier_type=ballot
+    uri: https://elections.democracyclub.org.uk/api/elections.json?coords=54.622642,-5.923832&current=1&identifier_type=ballot
   response:
     body: {string: '{"count":1,"next":null,"previous":null,"results":[
       {"election_id":"blablabla.bla", "group_type":null, "cancelled":false, "poll_open_date":"2099-12-31", "requires_voter_id":"EFA-2002"}
