--- a/polling_stations/apps/data_finder/tests/playwright/cassettes/test_valid_station_id[chromium].yaml
+++ b/polling_stations/apps/data_finder/tests/playwright/cassettes/test_valid_station_id[chromium].yaml
@@ -589,7 +589,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [python-requests/2.7.0 CPython/3.5.2 Linux/4.4.0-67-generic]
     method: GET
-    uri: https://elections.democracyclub.org.uk/api/elections.json?coords=51.1,-3.8&future=1&current=1&identifier_type=ballot
+    uri: https://elections.democracyclub.org.uk/api/elections.json?coords=51.1,-3.8&current=1&identifier_type=ballot
   response:
     body: {string: '{"count":1,"next":null,"previous":null,"results":[{"election_id":"blablabla.bla", "group_type":null, "cancelled":false, "poll_open_date":"2099-12-31"}]}'}
     headers:
