--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,6 +30,6 @@ repos:
       exclude: cdk/lambdas/wdiv-s3-trigger/tests/fixtures/.*
     - id: check-json
 - repo: https://github.com/rtts/djhtml
-  rev: v1.5.0
+  rev: 3.0.6
   hooks:
     - id: djhtml
