--- a/.circleci/deploy-config.yml
+++ b/.circleci/deploy-config.yml
@@ -4,8 +4,13 @@ version: 2.1
 orbs:
   node: circleci/node@5.2.0
   slack: circleci/slack@4.13.3
-  aws-cli: circleci/aws-cli@4.1.3
+  aws-cli: circleci/aws-cli@5.4.0
 
+
+commands:
+  install_uv:
+    steps:
+      - run: pip install --upgrade uv">=0.5.12,<0.6.0"
 
 # the default pipeline parameters, which will be updated according to
 # the results of the path-filtering orb
@@ -42,7 +47,7 @@ jobs:
           node-version: '18'
 
       - restore_cache:
-          key: v2-polling_stations-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}-{{ checksum "requirements/production.txt" }}-{{ checksum "requirements/ci.txt" }}
+          key:  v1-dependencies-{{ checksum "uv.lock" }}-{{ checksum "package-lock.json" }}
 
       - run:
           name: Install node node_modules
@@ -50,77 +55,61 @@ jobs:
           cache-path: ~/repo/node_modules
           override-ci-command: npm ci
 
+      - install_uv
+
       - run:
-          name: install app dependencies
+          name: install app system dependencies
           command: |
             sudo apt update && sudo apt install -y gdal-bin
-            pyenv local $(pyenv versions --bare | grep 3.12 | head -n 1)
-            python -m venv .venv
-            . .venv/bin/activate
-            python -m pip install --upgrade pip
-            pip install --no-deps -r requirements/base.txt -r requirements/testing.txt -r requirements/ci.txt
-            playwright install
-
-      - run:
-          name: install lambda trigger Python dependencies
-          command: |
-            . .venv/bin/activate
-            pip install --no-deps -r cdk/lambdas/wdiv-s3-trigger/requirements.txt
-            pip install --no-deps -r cdk/lambdas/wdiv-s3-trigger/requirements/testing.txt
-
-      - run:
-          name: install CDK Python dependencies
-          command: |
-            . .venv/bin/activate
-            pip install --no-deps -r requirements/cdk.txt
-
-      - run:
-          name: install Prod dependencies
-          command: |
-            . .venv/bin/activate
-            pip install --no-deps -r requirements/production.txt
-
-      - save_cache:
-          paths:
-            - ./.venv
-            - ./node_modules
-            - ./home/circleci/.cache
-          key: v2-polling_stations-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}-{{ checksum "requirements/production.txt" }}-{{ checksum "requirements/ci.txt" }}
 
       - run:
           name: Install HTML Tidy
           command: wget https://github.com/htacg/tidy-html5/releases/download/5.8.0/tidy-5.8.0-Linux-64bit.deb && sudo dpkg -i tidy-5.8.0-Linux-64bit.deb
 
       - run:
+          name: Install python deps
+          command: |
+            uv sync --all-packages --all-groups --no-python-downloads
+            uv run playwright install
+
+      - run: uv cache prune --ci
+
+      - save_cache:
+          paths:
+            - ./.venv
+            - ./node_modules
+            - $HOME/.cache
+            - $HOME/.cache/uv
+          key: v1-dependencies-{{ checksum "uv.lock" }}-{{ checksum "package-lock.json" }}
+
+      - run:
           name: Print versions
           command: |
-            . .venv/bin/activate
-            python --version
-            python manage.py --version
+            uv run python --version
+            uv run python manage.py --version
 
       - run:
           name: Pre-test checks
           command: |
-            . .venv/bin/activate
-            python -m pip check
-            python manage.py check
-            python manage.py makemigrations --check
-            ruff format . --check
-            ruff check .
-            git ls-files '*.html' | xargs djhtml --check
+            uv lock --locked
+            uv pip check
+            uv run python manage.py check
+            uv run python manage.py makemigrations --check
+            uv run ruff format . --check
+            uv run ruff check .
+            git ls-files '*.html' | xargs uv run djhtml --check
 
       - run:
           name: Pytest
           command: |
-            . .venv/bin/activate
-            python manage.py collectstatic --no-input
-            pytest --cov-report= --cov=polling_stations
+            uv run python manage.py collectstatic --no-input
+            uv run pytest --cov-report= --cov=polling_stations
 
       - run:
           name: Submit coverage
           command: |
-            . .venv/bin/activate
-            coveralls
+            uv run coveralls
+
 
       # In the event the build has failed, alert the dev team
       - slack/notify:
@@ -137,20 +126,19 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
+      - install_uv
       - restore_cache:
-          key: v2-polling_stations-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}-{{ checksum "requirements/production.txt" }}-{{ checksum "requirements/ci.txt" }}
+          key: v1-dependencies-{{ checksum "uv.lock" }}-{{ checksum "package-lock.json" }}
       - aws-cli/setup
       - run:
           name: Check and run new import scripts.
           command: |
             sudo apt update && sudo apt install -y gdal-bin
-            pyenv local $(pyenv versions --bare | grep 3.12 | head -n 1)
-            . .venv/bin/activate
             export CI_DB_PASSWORD=`aws ssm get-parameter --query Parameter.Value --name 'RDS_DB_PASSWORD' --output text`
             export CI_DB_NAME=`aws ssm get-parameter --query Parameter.Value --name 'RDS_DB_NAME' --output text`
             export CI_DB_HOST=`aws ssm get-parameter --query Parameter.Value --name 'RDS_DB_HOST' --output text`
             export S3_DATA_BUCKET=pollingstations.elections.production
-            python manage.py run_new_imports
+            uv run python manage.py run_new_imports
       # In the event the imports have failed, alert the dev team
       - slack/notify:
           event: fail
@@ -170,29 +158,27 @@ jobs:
 
     steps:
     - checkout
+    - install_uv
     - restore_cache:
-        key: v1-machine-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}
+        key: v1-dependencies-{{ checksum "uv.lock" }}-{{ checksum "package-lock.json" }}
+    - aws-cli/setup
     - run:
-        name: Install CDK Python dependencies
-        command: |
-          pyenv local $(pyenv versions --bare | grep 3.12 | head -n 1)
-          python -m venv .venv
-          . .venv/bin/activate
-          python -m pip install --no-deps -r requirements/cdk.txt
-    - save_cache:
-        paths:
-          - ./.venv
-          - ./node_modules
-        key: v1-machine-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}
+          name: Check wdiv-s3-trigger requirements
+          command: |
+            ./cdk/scripts/wdiv-s3-trigger-requirements.sh
+            # Check if the file changed
+            if ! git diff --exit-code cdk/lambdas/wdiv-s3-trigger/requirements.txt; then
+              echo "Error: wdiv-s3-trigger pyproject.toml updated, but requirements.txt hasn't been. Run ./cdk/scripts/wdiv-s3-trigger-requirements.sh and commit changes"
+              exit 1
+            fi
     - run:
         name: CDK version
         command: |
-          npx cdk --version
+          uv run npx cdk --version
     - run:
         name: CDK synth
         command: |
-          . .venv/bin/activate
-          npx cdk synth --all
+          uv run --group cdk npx cdk synth --all
     - persist_to_workspace:
         root: ~/repo/
         paths: [ cdk.out ]
@@ -213,14 +199,13 @@ jobs:
       DC_ENVIRONMENT: "<<parameters.dc-environment>>"
     steps:
     - checkout
+    - install_uv
     - restore_cache:
-        key: v1-machine-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}
+        key: v1-dependencies-{{ checksum "uv.lock" }}-{{ checksum "package-lock.json" }}
+    - aws-cli/setup
     - run:
         name: CDK deploy
-        command: |
-          pyenv local $(pyenv versions --bare | grep 3.12 | head -n 1)
-          . .venv/bin/activate
-          npx cdk deploy --all --require-approval never --concurrency 3
+        command: uv run --group cdk npx cdk deploy --all --require-approval never --concurrency 3
     # In the event the deployment has failed, alert the dev team
     - slack/notify:
         event: fail
@@ -252,26 +237,20 @@ jobs:
 
     steps:
     - checkout
+    - install_uv
     - node/install:
         node-version: '18'
     - restore_cache:
-        key: v2-polling_stations-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}-{{ checksum "requirements/production.txt" }}-{{ checksum "requirements/ci.txt" }}
+        key: v1-dependencies-{{ checksum "uv.lock" }}-{{ checksum "package-lock.json" }}
     - run:
         name: "Code Deploy: Create deployment group"
-        command: |
-          pyenv local $(pyenv versions --bare | grep 3.12 | head -n 1)
-          . .venv/bin/activate
-          python deploy/create_deployment_group.py
+        command: uv run python deploy/create_deployment_group.py
     - run:
         name: "Code Deploy: Create deployment"
-        command: |
-          . .venv/bin/activate
-          COMMIT_SHA=$CIRCLE_SHA1 python deploy/create_deployment.py
+        command: COMMIT_SHA=$CIRCLE_SHA1 uv run python deploy/create_deployment.py
     - run:
         name: Update auto scaling group
-        command: |
-          . .venv/bin/activate
-          python deploy/update_autoscaling_group.py
+        command: uv run python deploy/update_autoscaling_group.py
         no_output_timeout: 15m # TODO reduce/discuss what is suitable?
     - run:
         name: "Publish a new Sentry Release"
@@ -297,20 +276,19 @@ jobs:
 
     steps:
       - checkout
+      - install_uv
       - restore_cache:
-          key: v2-polling_stations-dependencies-{{ checksum "requirements/base.txt" }}-{{ checksum "requirements/testing.txt" }}-{{ checksum "requirements/cdk.txt" }}-{{ checksum "requirements/production.txt" }}-{{ checksum "requirements/ci.txt" }}
+          key: v1-dependencies-{{ checksum "uv.lock" }}-{{ checksum "package-lock.json" }}
       - aws-cli/setup
       - run:
           name: Check and run new import scripts after a deploy.
           command: |
             sudo apt update && sudo apt install -y gdal-bin
-            pyenv local $(pyenv versions --bare | grep 3.12 | head -n 1)
-            . .venv/bin/activate
             export CI_DB_PASSWORD=`aws ssm get-parameter --query Parameter.Value --name 'RDS_DB_PASSWORD' --output text`
             export CI_DB_NAME=`aws ssm get-parameter --query Parameter.Value --name 'RDS_DB_NAME' --output text`
             export CI_DB_HOST=`aws ssm get-parameter --query Parameter.Value --name 'RDS_DB_HOST' --output text`
             export S3_DATA_BUCKET=pollingstations.elections.production
-            python manage.py run_new_imports --post-deploy
+            uv run python manage.py run_new_imports --post-deploy
 
       # In the event the deployment has failed, alert the dev team
       - slack/notify:
