Pin python to 3.12.* in pyproj

--- a/cdk/lambdas/wdiv-s3-trigger/pyproject.toml
+++ b/cdk/lambdas/wdiv-s3-trigger/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "wdiv-s3-trigger"
 version = "0.0.0"
-requires-python = ">=3.12"
+requires-python = "==3.12.*"
 dependencies = [
     "chardet==5.2.0",
     "requests-paginator==0.2.0",
