Attach workspace in cdk deploy ci job

--- a/.circleci/deploy-config.yml
+++ b/.circleci/deploy-config.yml
@@ -197,6 +197,8 @@ jobs:
       DC_ENVIRONMENT: "<<parameters.dc-environment>>"
     steps:
     - checkout
+    - attach_workspace:
+        at: ~/repo
     - run:
         name: Install uv
         command: deploy/files/scripts/install_uv.sh
