temporarily disabling coveralls in CI
coveralls keeps returning 500s

--- a/.circleci/deploy-config.yml
+++ b/.circleci/deploy-config.yml
@@ -102,10 +102,11 @@ jobs:
             uv run python manage.py collectstatic --no-input
             uv run pytest --cov-report= --cov=polling_stations
 
-      - run:
-          name: Submit coverage
-          command: |
-            uv run coveralls
+      # Temporarily disabling this step because coveralls is down
+      # - run:
+      #     name: Submit coverage
+      #     command: |
+      #       uv run coveralls
 
 
       # In the event the build has failed, alert the dev team
