Revert "temporarily disabling coveralls in CI"
This reverts commit 7326f2241365d3d44b2dc07d77a63fcd59207fd5.

--- a/.circleci/deploy-config.yml
+++ b/.circleci/deploy-config.yml
@@ -102,11 +102,10 @@ jobs:
             uv run python manage.py collectstatic --no-input
             uv run pytest --cov-report= --cov=polling_stations
 
-      # Temporarily disabling this step because coveralls is down
-      # - run:
-      #     name: Submit coverage
-      #     command: |
-      #       uv run coveralls
+      - run:
+          name: Submit coverage
+          command: |
+            uv run coveralls
 
 
       # In the event the build has failed, alert the dev team
