--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,13 +13,13 @@ repos:
       language: system
       entry: pytest --ruff
       pass_filenames: false
-      stages: [push]
+      stages: [pre-push]
     - id: makemigrations
       name: makemigrations --check
       language: system
       entry: ./manage.py makemigrations --check
       pass_filenames: false
-      stages: [push]
+      stages: [pre-push]
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.2.0
   hooks:
