Add packages needed by import eoni command

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "asana==5.0.10",
     "boto3==1.35.78",
     "botocore==1.35.78",
+    "chardet==5.2.0",
     "commitment==3.0.1",
     "dc-design-system",
     "dc-django-utils",
@@ -27,6 +28,7 @@ dependencies = [
     "markdown==3.7",
     "marshmallow==3.26.2",
     "polars==1.17.1",
+    "pyproj==3.7.2",
     "pyshp==2.3.1",
     "rapidfuzz==3.10.1",
     "requests==2.32.4",
